; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_msm_sdcc.c_msmsdcc_stop_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mmc/host/extr_msm_sdcc.c_msmsdcc_stop_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msmsdcc_host = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i64, i64, i32* }

@MMCIDATACTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.msmsdcc_host*)* @msmsdcc_stop_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @msmsdcc_stop_data(%struct.msmsdcc_host* %0) #0 {
  %2 = alloca %struct.msmsdcc_host*, align 8
  store %struct.msmsdcc_host* %0, %struct.msmsdcc_host** %2, align 8
  %3 = load %struct.msmsdcc_host*, %struct.msmsdcc_host** %2, align 8
  %4 = getelementptr inbounds %struct.msmsdcc_host, %struct.msmsdcc_host* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @MMCIDATACTRL, align 8
  %7 = add nsw i64 %5, %6
  %8 = call i32 @writel(i32 0, i64 %7)
  %9 = load %struct.msmsdcc_host*, %struct.msmsdcc_host** %2, align 8
  %10 = getelementptr inbounds %struct.msmsdcc_host, %struct.msmsdcc_host* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  store i32* null, i32** %11, align 8
  %12 = load %struct.msmsdcc_host*, %struct.msmsdcc_host** %2, align 8
  %13 = getelementptr inbounds %struct.msmsdcc_host, %struct.msmsdcc_host* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i64 0, i64* %14, align 8
  %15 = load %struct.msmsdcc_host*, %struct.msmsdcc_host** %2, align 8
  %16 = getelementptr inbounds %struct.msmsdcc_host, %struct.msmsdcc_host* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 1
  store i64 0, i64* %17, align 8
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
